--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .logo {
@@ -13,7 +17,12 @@
 
 ul {
   /* this removes the dots on the list items*/
+  display: flex;
+  gap: 8px;
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+   
 }
 
 a {
